fix navbarm, footer and dark mode button

--- a/final/style/darkmode.css
+++ b/final/style/darkmode.css
@@ -6,11 +6,10 @@
 
 .dm-button {
     border: none;
-    border-inline-end-style: 0;
     outline-style: none;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
     height: 30px;
-    float: left;
+    position: absolute;
+    left:8%;
+    top:13%
 }
